# termlib

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
examples/: clock.c  main.c  physics.c
inc/: cursor.h  screen.h  termlib.h  termlib_types.h
src/: clock.c  cursor.c  input.h  main.c  physics.c  screen.c  screen.h  termlib.c  termlib.h  termlib_client.c  termlib_server.c  termlib_types.h
src/termlib/: cursor.c  screen.c  screen.h  termlib.c  termlib.h  termlib_types.h
